--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "intervention/image": "^2.4"
+        "intervention/image": "^2.4",
+        "ext-gd":" *"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -47,7 +48,7 @@
     },
     "config": {
         "preferred-install": "dist"
-    },
+    }
     
-    "gd": "*"
+    
 }
